# backend/recordbin/views.py
@@ -7,10 +7,10 @@ from django_filters.rest_framework import DjangoFilterBackend
 from .models import (
     Record,
     RecordSerializer,
-    Source,
-    SourceSerializer,
-    SourceToken,
-    SourceTokenSerializer,
+    App,
+    AppSerializer,
+    AppToken,
+    AppTokenSerializer,
 )
 from .filtersets import RecordFilterSet
 
@@ -35,8 +35,8 @@ class RecordViewSet(
     filter_backends = (DjangoFilterBackend,)
 
     def perform_create(self, serializer):
-        token = self.request.auth
-        serializer.save(source_id=token.source.pk)
+        app_token = self.request.auth
+        serializer.save(app_id=app_token.app.pk)
 
     def get_queryset(self):
         params = self.request.query_params.copy()
@@ -53,13 +53,13 @@ class RecordViewSet(
         # Authentication
         user = self.request.user  # logged in user or annon
         token = self.request.auth
-        if isinstance(token, SourceToken):
-            # TokenAuthentication: Filter Records by SourceToken__source
-            source = token.source
-            filter_kwargs["source"] = source
+        if isinstance(token, AppToken):
+            # TokenAuthentication: Filter Records by AppToken__app
+            app = token.app
+            filter_kwargs["app"] = app
         elif isinstance(token, Token):
             user = token.user
-            filter_kwargs["source__owner"] = user
+            filter_kwargs["app__owner"] = user
         elif not token and user.is_authenticated and user.is_staff:
             # SessionAuthentication: Admin session cookie (used by api/v1/ and docs)
             # No Filters
@@ -70,29 +70,29 @@ class RecordViewSet(
         return Record.objects.filter(**filter_kwargs)
 
 
-class SourceViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
+class AppViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
     """
     list:
-    Return a list of Record Sources.
+    Return a list of Apps.
     """
 
     permission_classes = (IsAuthenticated, IsAdminUser)
-    queryset = Source.objects.all()
-    serializer_class = SourceSerializer
+    queryset = App.objects.all()
+    serializer_class = AppSerializer
 
     def list(self, *args, **kwargs):
         return super().list(*args, **kwargs)
 
 
-class SourceTokenViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
+class AppTokenViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
     """
     list:
-    Return a list of Record Source Tokens.
+    Return a list of App Tokens.
     """
 
     permission_classes = (IsAuthenticated, IsAdminUser)
-    queryset = SourceToken.objects.all()
-    serializer_class = SourceTokenSerializer
+    queryset = AppToken.objects.all()
+    serializer_class = AppTokenSerializer
 
     def list(self, *args, **kwargs):
         return super().list(*args, **kwargs)
